[package]
name = "solmintwatch"
version = "0.1.0"
edition = "2024"
rust-version = "1.96"

[package.metadata.solmintwatch]
solana-network = "mainnet"
commitment = "confirmed"
fetch-metadata = true
metadata-timeout-secs = 2
ws-ping-interval-secs = 30
rpc-retry-max = 3
rpc-retry-base-ms = 500
rust-log = "info,solmintwatch=debug"
spl-token-program = "TokenkegQfeZyiNwAJbNbGKPFXCWuBvf9Ss623VQ5DA"
token-2022-program = "TokenzQdBNbLqP5VEhdkAS6EPFLC1PHnBqCXEpPxuEb"
metaplex-metadata-program = "metaqbxxUerdq28cj1RbAWkYQm3ybzjb6a8bt518x1s"

[dependencies]
anyhow = "1.0.103"
base64 = "0.22.1"
bs58 = "0.5.1"
chrono = { version = "0.4.45", default-features = false, features = ["clock", "std"] }
dotenvy = "0.15.7"
futures-util = "0.3.32"
reqwest = { version = "0.13.4", default-features = false, features = ["json", "rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.11.0"
curve25519-dalek = "4.1.3"
tokio = { version = "1.52.3", features = ["full"] }
tokio-tungstenite = { version = "0.29.0", features = ["rustls-tls-webpki-roots"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

[build-dependencies]
toml = "0.9.8"

[profile.release]
lto = "thin"
codegen-units = 1
