[package]
name = "solmintwatch"
version = "0.1.0"
edition = "2024"
rust-version = "1.96"

[dependencies]
anyhow = "1.0.103"
base64 = "0.22.1"
bs58 = "0.5.1"
chrono = { version = "0.4.45", default-features = false, features = ["clock", "std"] }
curve25519-dalek = "4.1.3"
dotenvy = "0.15.7"
futures-util = "0.3.32"
reqwest = { version = "0.13.4", default-features = false, features = ["json", "rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.11.0"
tokio = { version = "1.52.3", features = ["full"] }
tokio-tungstenite = { version = "0.29.0", features = ["rustls-tls-webpki-roots"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

[profile.release]
lto = "thin"
codegen-units = 1
